--- a/src/views/partials/post.ejs
+++ b/src/views/partials/post.ejs
@@ -1,41 +1,6 @@
-<% posts.forEach(function(post) { %>
-<div class="row bg-white rounded-3 p-3 mt-2">
-  <div class="col-md-4">
-    <img src="<%= post.images[0] %>" class="card-img-top rounded-3" alt="..." />
-  </div>
-  <div class="col-md-8">
-    <a
-      href="/details/<%= post.id %>"
-      class="card-title text-capitalize text-decoration-none fs-5 text-primary mt-2"
-      ><%= post.title %></a
-    >
-    <div class="card-rate text-warning">
-      <i class="fa fas fa-star"></i>
-      <i class="fa fas fa-star"></i>
-      <i class="fa fas fa-star"></i>
-      <i class="fa fas fa-star"></i>
-      <i class="fa fas fa-star"></i>
-    </div>
-    <p class="text-muted"><%= post.address%></p>
-    <p class="card-price text-success">
-      <%= post.price.toLocaleString('vi-VN', { style: 'currency', currency:
-      'VND' }) %><span>/Tháng</span>
-    </p>
-    <p class="card-text text-muted">
-      <?= post.description ?>
-    </p>
-    <a href="#" class="btn btn-success"><%= post.phone %></a>
-    <a href="#" class="btn btn-primary">Zalo</a>
-  </div>
-</div>
-<% }); %>
+<div class="post-list"></div>
+
 <!-- pagi -->
 <nav aria-label="Page navigation example">
-  <ul class="pagination mt-5">
-    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">Next</a></li>
-  </ul>
+  <ul class="pagination mt-5"></ul>
 </nav>
