--- a/public/css/style.css
+++ b/public/css/style.css
@@ -98,3 +98,21 @@ body {
   -webkit-line-clamp: 2;
   overflow: hidden;
 }
+
+.icon {
+  width: 2rem;
+  height: 2rem;
+}
+
+.icon i {
+  font-size: 1.5rem;
+}
+
+.icon-shape {
+  display: inline-flex;
+  padding: 12px;
+  text-align: center;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+}
