--- a/src/views/admin/depositHistory/index.ejs
+++ b/src/views/admin/depositHistory/index.ejs
@@ -33,8 +33,8 @@
               <tr>
                 <th>Ngày mua</th>
                 <th style="text-align: center; white-space: nowrap">Mã giao dịch</th>
-                <th style="text-align: center; white-space: nowrap"></th>
-                Tên gói
+                <th style="text-align: center; white-space: nowrap">gói tin</th>
+
                 <th style="text-align: center; white-space: nowrap">Số tiền</th>
                 <th>Trạng thái</th>
                 <th>Ghi chú</th>
